# TauriAndWeb

./: .gitignore  LICENSE  build_mac.sh  dev.sh  docker-compose.yml  init.sh  intro.md
docs/: init.md
project/: docker.sh
project/tauri/: package-lock.json
project/tauri/src-tauri/: tauri.conf.json
project/tauri/src-tauri/src/: lib.rs  main.rs
project/tauri/src/lib/: bridge.ts
project/tauri/src/routes/: +page.svelte
project/web/: Cargo.toml  Dockerfile
project/web/src/: main.rs
project/web/src/api/: greet.rs
shell/: resyncIcon.sh  rsyncTauri.sh  rsyncWeb.sh
src/init/: Cargo.toml
src/rust/: Cargo.toml  post_like.rs
src/rust/src/: lib.rs
src/svelte/: package-lock.json  package.json  svelte.config.js  vite.config.js
src/svelte/routes/: +layout.ts
src/svelte/src/lib/: bridge.ts
src/unshare/tauri/: bridge.ts
src/unshare/web/: bridge.ts
