
[package]
name = "src_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "src_common"
path = "src/lib.rs"
crate-type = ["rlib"]




[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

